Feature/insight list builders (#13)