@@ -1,6 +1,5 @@
 package org.digma.intellij.plugin.insights.view;
 
-import org.digma.intellij.plugin.model.discovery.CodeObjectInfo;
 import org.digma.intellij.plugin.model.rest.insights.HotspotInsight;
 import org.digma.intellij.plugin.ui.model.insights.HotspotListViewItem;
 import org.digma.intellij.plugin.ui.model.listview.ListViewItem;
@@ -8,38 +7,21 @@ import org.digma.intellij.plugin.view.ListGroupManager;
 import org.digma.intellij.plugin.view.ListViewItemBuilder;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
-public class HotspotListViewItemBuilder extends ListViewItemBuilder<HotspotInsight> {
-
-
-    private static final Integer SORT_INDEX = 0;
-
-    private final HotspotInsight insight;
-    @SuppressWarnings("FieldCanBeLocal")
-    private final CodeObjectInfo scope;
-
-    public HotspotListViewItemBuilder(@NotNull HotspotInsight insight, CodeObjectInfo scope) {
-        super(insight);
-        this.insight = insight;
-        this.scope = scope;
-    }
+public class HotspotListViewItemBuilder implements ListViewItemBuilder<HotspotInsight> {
 
     @Override
-    public List<ListViewItem> build(@NotNull ListGroupManager groupManager) {
+    public List<ListViewItem<?>> build(HotspotInsight insight, @NotNull ListGroupManager groupManager) {
 
-
-        HotspotListViewItem hotspotListViewItem = new HotspotListViewItem(
+        HotspotListViewItem hotspotListViewItem = new HotspotListViewItem(insight,
                 "This is an error hotspot",
                 "Many major errors occur or propagate through this function.",
                 "See how this was calculated",
-                "https://phmecloud.blob.core.windows.net/photo/web/ou0ehpjndrfhkkx1tekojx0-3.png",
-                SORT_INDEX);
+                "https://phmecloud.blob.core.windows.net/photo/web/ou0ehpjndrfhkkx1tekojx0-3.png"
+        );
 
-        hotspotListViewItem.setCodeObjectId(insight.getCodeObjectId());
-
-        return Collections.singletonList(hotspotListViewItem);
+        return List.of(hotspotListViewItem);
     }
 
 }
