@@ -1,46 +1,30 @@
 package org.digma.intellij.plugin.insights.view;
 
-import org.digma.intellij.plugin.model.discovery.CodeObjectInfo;
 import org.digma.intellij.plugin.model.rest.insights.SpanInsight;
+import org.digma.intellij.plugin.ui.model.insights.InsightListViewItem;
 import org.digma.intellij.plugin.ui.model.insights.SpanGroupListViewItem;
-import org.digma.intellij.plugin.ui.model.insights.SpanListViewItem;
 import org.digma.intellij.plugin.ui.model.listview.ListViewItem;
 import org.digma.intellij.plugin.view.ListGroupManager;
 import org.digma.intellij.plugin.view.ListViewItemBuilder;
 
-import java.util.Collections;
 import java.util.List;
 
-public class SpanListViewItemBuilder extends ListViewItemBuilder<SpanInsight> {
-
-    private static final Integer SORT_INDEX = 10;
-    private final SpanInsight insight;
-    private final CodeObjectInfo scope;
-
-    public SpanListViewItemBuilder(SpanInsight insight, CodeObjectInfo scope) {
-        super(insight);
-        this.insight = insight;
-        this.scope = scope;
-    }
+public class SpanListViewItemBuilder implements ListViewItemBuilder<SpanInsight> {
 
     @Override
-    public List<ListViewItem> build(ListGroupManager groupManager) {
+    public List<ListViewItem<?>> build(SpanInsight insight, ListGroupManager groupManager) {
         var span = insight.getSpan();
         var groupKey = "span:_" + span;
         SpanGroupListViewItem spanGroup = (SpanGroupListViewItem)
-                groupManager.getOrCreateGroup(groupKey, () -> new SpanGroupListViewItem(span,SORT_INDEX));
+                groupManager.getOrCreateGroup(groupKey, () -> new SpanGroupListViewItem(span));
 
-        ListViewItem listViewItem = createListViewItem();
-        spanGroup.getItems().add(listViewItem);
-        return Collections.singletonList(spanGroup);
+        final var listViewItem = createListViewItem(insight);
+        spanGroup.addItem(listViewItem);
+        return List.of(spanGroup);
     }
 
-    private ListViewItem createListViewItem() {
-
-        SpanListViewItem spanListViewItem = new SpanListViewItem(insight.getFlows(),0);
-        spanListViewItem.setCodeObjectId(insight.getCodeObjectId());
-        return spanListViewItem;
+    private ListViewItem createListViewItem(SpanInsight insight) {
+        return new InsightListViewItem<>(insight);
     }
-
 
 }
